# vote

./: Cargo.toml  build.rs  example.env  h.rs
migrations/2021-01-25-001931_polls/: down.sql  up.sql
migrations/2021-01-25-002057_cast-votes/: down.sql  up.sql
planning/: tables.sql
src/: auth.rs  main.rs  models.rs  schema.rs  templates.rs
src/routes/: auth.rs  mod.rs  polls.rs
templates/: 404.html  hello.html  polls.html  redirect.html
