[package]
name = "vote"
version = "0.1.0"
authors = ["eokovacs"]
edition = "2018"

[dependencies]
askama = "0.10"
async-std = "1.9"
base64 = "0.13"
dotenv = "0.15"
envy = "0.4"
lazy_static = "1.4"
rand = "0.8"
reqwest = { version = "0.10", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "fa77435187aaedda73b0caad0ab5bfdb24a8b476", features = ["secrets"] }
rust-embed = { version = "5.9", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twilight-http = "0.2"
twilight-model = "0.2"
twilight-oauth2 = { git = "https://github.com/twilight-rs/oauth2", rev = "2de30560ef8da8956890b5e8872269197a374d37" }
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"
derive_more = "0.99"
uuid = { version = "0.8", features = ["serde", "v4"] }
indexmap = { version = "1.6", features = ["serde-1"] }

[build-dependencies]
regex = "1.4"
